feat: implements user favorite